--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<nav>
 				<div class="nav-container">
-					<img style="width: 100px;" src="img/large.png">
+					<img style="width: 11%;" src="img/logo.jpg">
 					<div class="btn">
 						<div class="bar"></div>
 						<div class="bar"></div>
@@ -35,10 +35,9 @@
 
 			<div class="banner">
 				<div class="banner-center">
-					<img style="width: 200px;" src="img/large.png">
+					<img class="visible-logo" src="img/logo.jpg">
 					<!-- <h1>AFEA</h1> -->
 					<h3>African Empowerment Agency.</h3>
-					<div id="line"></div>
 					<div class="banner-icons">
 						<a href="">
 							<i class="fab fa-facebook-f"></i>
@@ -52,6 +51,10 @@
 					</div>
 				</div>
 			</div>
+			
+			<a href="#special" class="btn header-link primary-color">
+                <i class="fas fa-arrow-down"></i>
+            </a>
 		</header>
 <!--End of header-->
 		
