done with services section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Recording</title>
 		<link rel="stylesheet" href="main.css">
 		<!-- google fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Cantarell:700i|Niconne|Roboto:500&display=swap" rel="stylesheet">
 		<!--   -->
 		<script src="fontawesome-all.js"></script>
 	</head>
@@ -82,24 +83,35 @@
 				<div class="service-content">
 				<i class="fa fa-cogs"></i>
 					<h3>Event planning</h3><br>
-					<p>this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content</p>
+					<p>AFEA being the heart of event planning and hostesses has been in several events of high and international standards.We strive to give you the best more than your wallets can ever afford because we believe the devotion we bring to your event will give you a smile that will last a life time.
+AFEA is an elastic event planner, that’s why budgeting, establishing timelines, selecting and reserving the event sites, acquiring permits, planning food, coordinating transportation, developing a theme, arranging for activities, selecting speakers and keynotes, arranging for equipment and facilities, managing risk, and  event security would never be your worry when we handle your event . 
+This has become a daily house hold routine at AFEA because our training gives the necessary skills and ability for our staff to multitask in all domain.
+ You can count on AFEA because; We are highly organized people and we are savvy networkers. Our basic Understanding of Events, dedication to client service, unbridled creativity, resilience and adaptability is a good reason for you to book AFEA.</p>
 
 				</div>
 				<div class="service-content">
 					<i class="fa fa-cogs"></i>
 					<h3>Hostesses</h3><br>
-					<p>this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content</p>
+					<p>AFEA Hostesses have a high level of customer service expertise, professionalism in people management, they multi task and also take care of the basic Math and Planning of events
+These beautiful princesses have graced many big events and have a mastery, they know that Service is Black and White but in AFEA “Hospitality is Color.”
+Call our Hotline for your events and your smile will last a life time. </p>
 				</div>
 				<div class="service-content">
 					<i class="fa fa-cogs"></i>
 					<h3>arts and craft </h3><br>
-					<p>this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content</p>
+					<p>AFEA has been promoting and developing arts and crafts by making things with our own hand and mainly things one would consider waste. Recycling and waste transformation is the main drive of AFEA arts and crafts for healthy environment and economic empowerment.
+AFEA uses materials that are considered useless and waste to come up with useful and consumable products that beautifies your environment beyond expectation.  The AFEA handicraft center gives it members an exposure to DIY (Do it Yourself) thereby empowering your creative minds which can enhance better life for many young and enthusiastic cameroonian who will become entrepreneur in this field.
+Crafts items are usually sold to economically empower and help in  raising seed capital  to the individuals.
+AFEA trains women and young people with no formal education into arts and crafts. These activity raises income and gives the financial independence. 
+Visit Our Handicraft center to have a firsthand testimony of our DIY Products.</p>
 				</div>
+<!--
 				<div class="service-content">
 					<i class="fa fa-cogs"></i>
 					<h3>Capacity seminars and workshops.</h3><br>
 					<p>this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content >this is where the content is suppose to enter, please add the content</p>
 				</div>
+-->
 			</div>
 			
 			
