started adding green colors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<!-- google fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Cantarell:700i|Niconne|Roboto:500&display=swap" rel="stylesheet">
 		<!--   -->
+		<link rel="stylesheet" href="magnific-popup.css">
+		<link rel="stylesheet" href="bootstrap.min.css">
 		<script src="fontawesome-all.js"></script>
 	</head>
 	<body>
@@ -83,6 +85,11 @@
 				<div class="service-content">
 				<i class="fa fa-cogs"></i>
 					<h3>Event planning</h3><br>
+					<div class="service-pic-div">
+					    <img class="service-pic" src="img/0lhB3x.jpg" alt="missing pic">
+					    <p>see more</p>
+					</div>
+					
 					<p>AFEA being the heart of event planning and hostesses has been in several events of high and international standards.We strive to give you the best more than your wallets can ever afford because we believe the devotion we bring to your event will give you a smile that will last a life time.
 AFEA is an elastic event planner, that’s why budgeting, establishing timelines, selecting and reserving the event sites, acquiring permits, planning food, coordinating transportation, developing a theme, arranging for activities, selecting speakers and keynotes, arranging for equipment and facilities, managing risk, and  event security would never be your worry when we handle your event . 
 This has become a daily house hold routine at AFEA because our training gives the necessary skills and ability for our staff to multitask in all domain.
@@ -216,7 +223,10 @@ Visit Our Handicraft center to have a firsthand testimony of our DIY Products.</
 			<p class="copy-right">Copyright&copy;FastAndFaster.All rights reserved</p>
 		</footer>
 <!-- end footer -->
-		<script src=""></script>
+		<script src="script.js"></script>
+		<script src="jquery-3.4.1.min.js"></script>
+		<script src="bootstrap.bundle.min.js"></script>
+		<script src="magnific-popup/jquery.magnific-popup.js"></script>
 		
 	</body>
 </html>
